syntax = "proto3";

package lockbox;

option go_package = "github.com/iotaledger/lockbox/v2/pkg/lockbox/proto";

service LockBoxService {
  rpc LockAsset(LockAssetRequest) returns (LockAssetResponse);
  rpc UnlockAsset(UnlockAssetRequest) returns (UnlockAssetResponse);
  rpc GetAssetStatus(GetAssetStatusRequest) returns (GetAssetStatusResponse);
  rpc ListAssets(ListAssetsRequest) returns (stream ListAssetsResponse);
  rpc CreateMultiSig(CreateMultiSigRequest) returns (CreateMultiSigResponse);
  rpc EmergencyUnlock(EmergencyUnlockRequest) returns (EmergencyUnlockResponse);
  rpc GetServiceInfo(GetServiceInfoRequest) returns (GetServiceInfoResponse);
}

message LockAssetRequest {
  string owner_address = 1;
  bytes output_id = 2;
  int64 lock_duration_seconds = 3;
  string lock_script = 4;
  repeated string multi_sig_addresses = 5;
  int32 min_signatures = 6;
}

message LockAssetResponse {
  string asset_id = 1;
  int64 lock_time = 2;
  int64 unlock_time = 3;
  string status = 4;
}

message UnlockAssetRequest {
  string asset_id = 1;
  repeated bytes signatures = 2;
  map<string, string> unlock_params = 3;
}

message UnlockAssetResponse {
  string asset_id = 1;
  bytes output_id = 2;
  int64 unlock_time = 3;
  string status = 4;
}

message GetAssetStatusRequest {
  string asset_id = 1;
}

message GetAssetStatusResponse {
  string asset_id = 1;
  string status = 2;
  int64 lock_time = 3;
  int64 unlock_time = 4;
  string owner_address = 5;
  uint64 amount = 6;
}

message ListAssetsRequest {
  string owner_address = 1;
  string status = 2;
  int32 page_size = 3;
  string page_token = 4;
}

message ListAssetsResponse {
  repeated AssetInfo assets = 1;
  string next_page_token = 2;
}

message AssetInfo {
  string asset_id = 1;
  string status = 2;
  int64 lock_time = 3;
  int64 unlock_time = 4;
  uint64 amount = 5;
}

message CreateMultiSigRequest {
  repeated string addresses = 1;
  int32 min_signatures = 2;
}

message CreateMultiSigResponse {
  string multi_sig_id = 1;
  string address = 2;
}

message EmergencyUnlockRequest {
  string asset_id = 1;
  string reason = 2;
  repeated bytes emergency_signatures = 3;
}

message EmergencyUnlockResponse {
  string asset_id = 1;
  string status = 2;
  int64 unlock_time = 3;
}

message GetServiceInfoRequest {}

message GetServiceInfoResponse {
  string version = 1;
  string tier = 2;
  int64 max_lock_time = 3;
  ServiceFeatures features = 4;
  repeated string node_locations = 5;
}

message ServiceFeatures {
  bool multi_sig_support = 1;
  bool emergency_unlock = 2;
  int32 geographic_redundancy = 3;
  bool scripting_enabled = 4;
}